--- a/Content/app.css
+++ b/Content/app.css
@@ -1,1 +1,5 @@
 /* Custom CSS goes here */
+.bg-image {
+    background-image: url('https://mdbcdn.b-cdn.net/img/new/fluid/nature/015.webp');
+    height: 100vh;
+  }
