deployed ICE7 to live server

--- a/Views/content/contact.html
+++ b/Views/content/contact.html
@@ -1,22 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
-    <!-- CSS Section -->
-    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css">
-    <link rel="stylesheet" href="./Content/app.css">
-</head>
-<body>
-    <header>
-        
-    </header>
-
-    <main class="container">
-        <h1>Contact Us</h1>
+<h1>Contact Us</h1>
         <div id="messageArea"></div>
 
         <div class="row justify-content-lg-center g-3">
@@ -55,19 +37,6 @@
           </form>
 
           <div class="col-lg-3 col-md-3">
-            <a href="contact-list.html" class="btn btn-primary btn-lg"><i class="fas fa-users fa-lg"></i> Show Contact List</a>
+            <a id="showContactListButton" href="/contact-list" class="btn btn-primary btn-lg"><i class="fas fa-users fa-lg"></i> Show Contact List</a>
           </div>
       </div>
-    </main>
-
-        
-    
-    <!-- Scripting Section -->
-    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
-    <script src="./Scripts/namespace.js"></script>
-    <script src="./Scripts/contact.js"></script>
-    <script src="./Scripts/app.js"></script>
-</body>
-</html>
