--- a/Views/content/Home.html
+++ b/Views/content/Home.html
@@ -1,2 +1,2 @@
-<h1 class="mb-5"><i class="fas fa-drum"></i> Welcome to ICE-7</h1>
-        <button id="AboutUsButton" class="btn btn-primary">Learn More About Us!</button>
+<h1 class="mb-5">Welcome to Our Site!</h1>
+<button id="AboutUsButton" class="btn btn-primary">Learn more About Us!</button>
