--- a/Views/components/header.html
+++ b/Views/components/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/"><i class="fas fa-spider"></i> WEBD6201</a>
+      <a class="navbar-brand" data="/"><i class="fas fa-spider"></i> WEBD6201</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -16,12 +16,12 @@
             <a class="nav-link" data="services"><i class="fas fa-map-signs"></i> Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" data="about"><i class="fas fa-info"></i> About</a>
+            <a class="nav-link" data="about"><i class="fas fa-info"></i> About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" data="contact"><i class="fas fa-envelope"></i> Contact</a>
+            <a class="nav-link" data="contact"><i class="fas fa-envelope"></i> Contact Us</a>
           </li>
-          <li class="nav-item" id="login">
+          <li id="login" class="nav-item">
             <a class="nav-link" data="login"><i class="fas fa-sign-in-alt"></i> Login</a>
           </li>
         </ul>
